delete all the credentials

--- a/helen_xier_work/new_bollywood_notebook.ipynb
+++ b/helen_xier_work/new_bollywood_notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +172,14 @@
        "4       90    6.9        Joey Cramer   36636  Mark H. Baker  1986  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create IMDB Movie DataFrame\n",
-    "IMDB_file = \"./IMDB_movies.csv\"\n",
+    "IMDB_file = \"Resources/IMDB_movies.csv\"\n",
     "IMDB_df = pd.read_csv(IMDB_file, encoding='latin-1')\n",
     "IMDB_df.head()"
    ]
@@ -444,7 +444,7 @@
    ],
    "source": [
     "# Create Bollywood Movie DataFrame\n",
-    "Bolly_file = \"./BollywoodMovieDetail.csv\"\n",
+    "Bolly_file = \"Resources/BollywoodMovieDetail.csv\"\n",
     "Bolly_df = pd.read_csv(Bolly_file)\n",
     "Bolly_df.head(11)"
    ]
@@ -578,13 +578,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -606,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_connection_string = \"postgres:Zhaoxier879@localhost:5432/movie_db\"\n",
+    "rds_connection_string = \"postgres:YOUR PASSWARD FOR PGADMIN4@localhost:5432/movie_db\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
@@ -632,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +698,7 @@
        "4  tt0227194                         One 2 Ka 4        2001"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,14 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,17 +720,15 @@
     "import json\n",
     "base_URL = \"http://www.omdbapi.com/?apikey=\"\n",
     "\n",
-    "#for i in range (0,1000)\n",
     "#create a list of IMDB id numbers\n",
     "\n",
     "responses =[]\n",
-    "IMDB_id=[]\n",
-    "\n"
+    "IMDB_id=[]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,20 +738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "#len(IMDB_id)\n",
     "#corresponding to daily limits 1000 api calls, set up a range limit\n",
-    "new_IMDB_id = IMDB_id[0:500]\n",
-    "#new_IMDB_id"
+    "new_IMDB_id = IMDB_id[0:1000]\n",
+    "#to check the length of the new_IMDB_id list\n",
+    "#len(new_IMDB_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,27 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#to check the type object \n",
-    "#type(responses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,43 +781,12 @@
     "    title.append(responses[count]['Title'])\n",
     "    release_year.append(responses[count]['Year'])\n",
     "    imdb_rating.append(responses[count]['imdbRating'])\n",
-    "    count+=1\n",
-    "\n",
-    "        "
+    "    count+=1       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['imdbId', 'title', 'releaseYear', 'releaseDate', 'genre', 'writers',\n",
-       "       'actors', 'directors', 'sequel', 'hitFlop'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Bolly_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +922,7 @@
        "9  tt0248617                         Yaadein...          4.5        2001"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1038,7 @@
        "4                         One 2 Ka 4           2001  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1144,7 @@
        "4                         One 2 Ka 4          2001          5.4"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1288,58 +1222,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>495</td>\n",
-       "      <td>Police Force: An Inside Story</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>5.2</td>\n",
+       "      <td>995</td>\n",
+       "      <td>The Master, the Wife and the Gangster</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>7.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>496</td>\n",
-       "      <td>Vaastu Shastra</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>4.9</td>\n",
+       "      <td>996</td>\n",
+       "      <td>Rowdy Rathore</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>5.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>497</td>\n",
-       "      <td>Elaan</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>4.4</td>\n",
+       "      <td>997</td>\n",
+       "      <td>Barfi!</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>8.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>498</td>\n",
-       "      <td>Rakht</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>3.7</td>\n",
+       "      <td>998</td>\n",
+       "      <td>Jo Dooba So Paar: It's Love in Bihar!</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>5.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>499</td>\n",
-       "      <td>Mujhse Shaadi Karogi</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>6.7</td>\n",
+       "      <td>999</td>\n",
+       "      <td>Inkaar</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6.1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>500 rows × 3 columns</p>\n",
+       "<p>1000 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 title release_year movie_rating\n",
-       "0                               Albela         2001          3.6\n",
-       "1    Lagaan: Once Upon a Time in India         2001          8.1\n",
-       "2             Meri Biwi Ka Jawab Nahin         2004          4.6\n",
-       "3               Hum Tumhare Hain Sanam         2002          5.4\n",
-       "4                           One 2 Ka 4         2001          5.4\n",
-       "..                                 ...          ...          ...\n",
-       "495      Police Force: An Inside Story         2004          5.2\n",
-       "496                     Vaastu Shastra         2004          4.9\n",
-       "497                              Elaan         2005          4.4\n",
-       "498                              Rakht         2004          3.7\n",
-       "499               Mujhse Shaadi Karogi         2004          6.7\n",
+       "                                     title release_year movie_rating\n",
+       "0                                   Albela         2001          3.6\n",
+       "1        Lagaan: Once Upon a Time in India         2001          8.1\n",
+       "2                 Meri Biwi Ka Jawab Nahin         2004          4.6\n",
+       "3                   Hum Tumhare Hain Sanam         2002          5.4\n",
+       "4                               One 2 Ka 4         2001          5.4\n",
+       "..                                     ...          ...          ...\n",
+       "995  The Master, the Wife and the Gangster         2011          7.2\n",
+       "996                          Rowdy Rathore         2012          5.8\n",
+       "997                                 Barfi!         2012          8.1\n",
+       "998  Jo Dooba So Paar: It's Love in Bihar!         2011          5.7\n",
+       "999                                 Inkaar         2013          6.1\n",
        "\n",
-       "[500 rows x 3 columns]"
+       "[1000 rows x 3 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# compare bollywood movie dataset with general IMDB movie dataset"
+    "# IMDB movie dataset"
    ]
   },
   {
